GNOME Bugzilla – Bug 771570
quick add popover doesn't update default calendar after change on first event creation
Last modified: 2017-04-17 18:20:40 UTC
After the default calendar is changed, the first event creation using quick add popover (in month view) selects the old default calendar. The subsequent additions selects the right calendar. This can cause severe bugs, say, like when the default calendar is removed.
Created attachment 336399 [details] [review] manager: add ::default-calendar property This property acts as a proxy to ESourceRegistry::default-calendar and will be used by future patches to track when the default calendar changes.
Created attachment 336400 [details] [review] quick-add-popover: track default calendar Update the selected calendar when the default one changes.
Created attachment 336401 [details] [review] manager: setup default calendar on event creation When an event is successfully created, make that the default source.
Thanks for the report. Attachment 336399 [details] pushed as dfdcb7c - manager: add ::default-calendar property Attachment 336400 [details] pushed as df13ac2 - quick-add-popover: track default calendar Attachment 336401 [details] pushed as 10391ae - manager: setup default calendar on event creation